@@ -5263,6 +5263,9 @@ http://www.pygtk.org/pygnomevfs/class-gnomevfs-fileinfo.html
                             <para>Support for SMB authentication</para>
                         </listitem>
                         <listitem>
+                            <para>Added displaying total size of files in selected subirs</para>
+                        </listitem>
+                        <listitem>
                             <para>Updated help docs</para>
                         </listitem>
                         <listitem>
