@@ -1,3 +1,11 @@
+2007-03-12  Koos Jan Niesink  <kjniesink@yahoo.co.uk>
+
+	* src/gnome-cmd-file-list.cc:
+	* src/gnome-cmd-file-selector.cc:
+	* src/gnome-cmd-file.cc:
+	* src/gnome-cmd-file.h:
+	Display total size of files in subirs selected with SPACE
+
 2007-03-11  Dušan Hokův  <dusan@mirc.cz>
 
 	* src/gnome-cmd-main-win.cc:
@@ -101,7 +109,7 @@
 	* src/tags/gnome-cmd-tags.c:
 	Split gcmd_tags_*() functions into separate files
 
-2007-02-14  Koos Jan Niesink  <kjniesink@yahoo.co.uk>
+2007-02-14  koos  <kjniesink@yahoo.co.uk>
 
 	* src/tags/gnome-cmd-tags.c:
 	Fix build error (partially revert commit #697)
@@ -189,7 +197,7 @@
 	* src/utils.c:
 	Added support for python plugins
 
-2007-01-14  Koos Jan Niesink  <kjniesink@yahoo.co.uk>
+2007-01-14  koos  <kjniesink@yahoo.co.uk>
 
 	* src/gnome-cmd-file-selector.c:
 	Fixed bug #371948 and #388970 (file path not escaped)
@@ -218,7 +226,7 @@
 	Set default action to 'Replace' for overwriting confirmation dialog
 	The dialog can be closed with ESC now
 
-2006-12-18  Koos Jan Niesink  <kjniesink@yahoo.co.uk>
+2006-12-18  koos  <kjniesink@yahoo.co.uk>
 
 	* src/gnome-cmd-file-list.c:
 	Prevent gcmd from editing dirs
@@ -311,7 +319,7 @@
 	* src/useractions.c:
 	Prettify about dialogs
 
-2006-11-26  Koos Jan Niesink  <kjniesink@yahoo.co.uk>
+2006-11-26  koos  <kjniesink@yahoo.co.uk>
 
 	* src/gnome-cmd-file-list.c:
 	Fixed bug #377706 (selecting files with SHIFT+PGDN)
